<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="40dp"
    android:paddingRight="40dp"
    android:gravity="center_horizontal"
    android:id="@+id/main_back"
    tools:context=".vista.MainActivity">

    <ImageView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/wapper_sin"
        android:adjustViewBounds="true"/>

    <Button
        android:id="@+id/btn_registro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registrarse"
        android:textStyle="normal"
        android:textSize="18dp"
        android:background="@drawable/shape"
        android:onClick="registro"
        android:textColor="@color/blanco"
        android:layout_alignBottom="@+id/name"
        android:layout_centerHorizontal="true"
        android:paddingRight="30dp"
        android:paddingLeft="30dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tienes_cuenta"
        android:id="@+id/pregunta"
        android:layout_above="@+id/login"
        android:gravity="center"
        android:layout_marginBottom="10dp"
        android:textColor="@color/blanco"
        android:textSize="30dp"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="25dp"
        android:gravity="center_horizontal"
        android:text="@string/login"
        android:clickable="true"
        android:onClick="login"
        android:textColor="@color/principal"
        android:textSize="20dp"
        android:textAlignment="center"
        android:textColorLink="@color/blanco"/>


</RelativeLayout>
