<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/name_ballena"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:adjustViewBounds="true"
        android:padding="30dp"
        android:src="@drawable/wapper_ballena" />

    <EditText
        android:id="@+id/login_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name_ballena"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:layout_marginBottom="10dp"
        android:padding="5dp"
        android:hint="@string/usuario"
        android:inputType="text"
        android:singleLine="true"
        android:textAlignment="center"
        android:textColor="@color/blanco"
        android:textColorHint="@color/blanco"
        android:theme="@style/Textolabel"
        android:background="@drawable/shape1"/>

    <EditText
        android:id="@+id/login_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_user"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:layout_marginBottom="10dp"
        android:padding="5dp"
        android:hint="@string/contraseña"
        android:inputType="textPassword"
        android:singleLine="true"
        android:textAlignment="center"
        android:textColor="@color/blanco"
        android:textColorHint="@color/blanco"
        android:theme="@style/Textolabel"
        android:background="@drawable/shape1"/>

    <TextView
        android:id="@+id/pregunta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_pass"
        android:layout_marginTop="12dp"
        android:clickable="true"
        android:gravity="center"
        android:onClick="olvidarPass"
        android:text="Olvidaste la contraseña?"
        android:textAlignment="center"
        android:textColor="@color/blanco"
        android:textSize="15dp" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pregunta"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:background="@drawable/shape"
        android:onClick="lanzarHome"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:text="@string/login"
        android:textColor="@color/blanco"/>


</RelativeLayout>
